Intial draft of Paper section 1

--- a/Latex/FinalPaper/00_Cover.tex
+++ b/Latex/FinalPaper/00_Cover.tex
@@ -1,4 +1,4 @@
-\title{Introduction to Games and Simulations\\
+\title{Introduction to Theoretical and Practical Approaches to Games\\
 %%{\footnotesize \textsuperscript{*}Subtitle}
 %% \thanks{Identify applicable funding agency here. If none, delete this.}
 }
