--- a/Latex/FinalPaper/01_Introduction.tex
+++ b/Latex/FinalPaper/01_Introduction.tex
@@ -1,67 +1,18 @@
 
 \section{Introduction}
-In many cases, Game Theory is the study of strategy and
-decision making in competitive scenarios, with the goal of
-mathematically modeling the decision making processes to
-determine opportune moves. In this way, Game Theory can
-be though of as ``the science of strategy''~\cite{b3}.
-Traditionally, the analyzed models are zero-sum competitions,
-where various choices are available
-that will lead to possible win/loss/draw scenarios for each
-player~\cite{b1}. Using this decision tree analysis, modeling can be
-developed to demonstrate likeliness of winning a competitive
-scenario, and how each decision affects that probability. In
-the context of video games, there are some games that this
-could directly be applied to; for example, competitive Pokemon
-battle competitions draw steep competition across the world
-and meet most of the classic game theory requirements. The
-concepts of game theory in the context of Video Games are more
-broad. 
 
-When looking at Game theory in the context of Video Games
-there is a broad overlap of  subject matter, like defining
-rules and agent decision trees, or looking at strategies for
-competition (with changes for more than two players,
-non-zero-sum rules, etc.). Additionally, Decision Theory
-applies to both traditional Game Theory and its application to
-Video Games. Decision Theory evaluates the set of prospects
-(available options) and analyzes preferences among those
-options for an agent in the scenario~\cite{b2}. For Game
-Theory, we can then evaluate which selections are more
-opportune in a competitive scenario, or consider how Players
-may interact with the set of rules within the Video Game
-being developed.
+Traditionally, Game Theory is the study of strategy and decision making in competitive scenarios, with the goal of mathematically modeling the decision making processes to determine opportune moves. In this way, Game Theory can be though of as ``the science of strategy''~\cite{b3}. In general, the analyzed models are zero-sum competitions, where various choices are available that will lead to possible win/loss/draw scenarios for each player~\cite{b1}. Using this decision tree analysis, modeling can be developed to demonstrate likeliness of winning a competitive scenario, and how each decision affects that probability. In the context of video games, there are some games that this could directly be applied to; for example, competitive \textit{Pok\'emon} battle tournaments draw steep competition across the world and meet most of the classic game theory requirements. 
 
-Theory for Video Games expands on these concepts. In addition
-to the application of strategy and decision making, Video
-Games must be appealing to Players as the goal is to draw
-engagement from the users, using appealing visuals and
-creating games systems that are enjoyable and challenging to
-the Player. Categorizing by genre allows for users to assess
-and consider games based on similarity between similarity in
-rules, subject matter, and even difficulty so that Players can
-learn from experiences and apply these lessons to improving in
-skills required for certain games. For example, aim and
-reaction time may be critical to games in the First-Person
-Shooter genre, while Puzzle games may require critical or
-non-linear thinking to come up with solutions in the context
-of that game’s world.
+Analysing Video Game theory requires an expansion of this subject. While there is a broad overlap of subject matter, like defining rules and agent decision trees or looking at strategies for competition, the sepecifics are generally more complex as the competition may include more than two players,  or one player against the game's \ac{AI}. Additionally, Decision Theory applies to both traditional Game Theory and its application to Video Games. Decision Theory evaluates the set of prospects (available options) and analyzes preferences among those options for an agent in the scenario~\cite{b2}. Decision Theory can be applied to evaluate which selections are more opportune in a competitive scenario, or consider how Players may interact with the set of rules within the Video Game being developed.
 
-Practical approaches to games involve the actual programming
-and creation of games, like adding code to generate game
-mechanics for the Player or Agent to interact with.
-Additional practical approaches include visuals for the game,
-and creation of characters, models, and environments for the
-game. To have a complete game, it is important to consider
-games in both theoretical and practical ways; to fully
-immerse the player, the world has to be engaging and
-entertaining, but it is important to have challenges for the
-player to overcome to create additional satisfaction.
-Applying Game Theory allows designers to analyze mechanics
-for balance, making sure that challenges are appropriate for
-the current player skill level, or that all options for
-things such as in-game loadout have appropriate positives
-and negatives to encourage players to engage in different
-but viable strategies for success in games.
+Practical approaches to games involve the actual programming and creation of games, like adding code to generate game mechanics for the Player or Agent to interact with. Additional practical approaches include visuals for the game, and creation of characters, models, and environments for the game. To have a complete game, it is important to consider games in both theoretical and practical ways; to fully immerse the player, the world has to be engaging and entertaining, but it is important to have challenges for the player to overcome to create additional satisfaction. Applying Game Theory allows designers to analyze mechanics for balance, making sure that challenges are appropriate for the current player skill level, or that all options for things such as in-game loadout have appropriate positives and negatives to encourage players to engage in different but viable strategies for success in games.
 
+What sets Video Games apart from other Phisics-based computer systems, such as Simulations, is the idea of that games are intended to bring some sort of satisfaction to Players in order to draw engagment, using appealing visuals and creating games systems that are enjoyable and challenging to the Player. Categorizing games by genre allows for users to assess and consider games based on similarity between similarity in rules, subject matter, and even difficulty so that Players can learn from experiences and apply these lessons to improving in skills required for certain games. For example, aim and reaction time may be critical to games in the First-Person Shooter genre, while Puzzle games may require critical or non-linear thinking to come up with solutions in the context of that game’s world.
 
+One of my preferred genres is \ac{A-A}: a genre built upon the combination of two other genres. This genre is generally characterized by building upon the set of features of its individual components as a combination of exploration and combat. From the Action genre, common features of \ac{A-A} include discovery of new areas, item collection, and puzzle solving as a means of accessing new locations. The combination of these features Combat from Action games is what sets \ac{A-A} games into a category of its own.
+
+A great example of a recent \ac{A-A} game is \textit{Tunic}. The game is very reminiscent of the original \textit{The Legend of Zelda} game (often considered one of the defining games of the genre~\cite{b4}), as the Player embarks on a journey of exploration in a mostly open-world map, fighting increasingly difficult enemies and acquiring new items for combat and exploration. The defining feature of \textit{Tunic}, however, is the inclusion of a second level of puzzle solving; in addition to learning how to access the challenges and puzzles in the world, the Player must also discover the rules of the game itself. Other than the standard in-game menu for saving and options, explanations of features and storeline are contained in an “Instruction Booklet” written partially in an in-game language unknown to the Player and with many pages outright missing. The Player must learn the rules through context clues, discovering new pages during exploration, or by the sheer luck of trial-and-error. The additional layer of discovery adds another set of satisfying payoffs for players who enjoy the feeling of discovery provided by learning and mastering the rules of Action-Adventure games.
+
+Another recent \ac{A-A} game, \textit{Outer Wilds}, brings a similar feeling of satisfaction through a different application of mystery about game features. The player starts out with all of the in-game skills they will need to beat the game, but completion of the game is gated by knowledge of the rules of the character's world itself. Players must loop through the game, applying knowledge learned through previous iterations to further their understanding, eventually learning how to complete the game. Similar to \textit{Tunic}, knowledge is tracked in an updating in-game log to help player's keep track of information they have learned about the world. This explanation of the game systems is purposfully left at very high level as it shares another feature with \textit{Tunic}: spoiling how the sysems work removes some satisfaction of figuring out game rules in real time.
+
+This paper will look at how similar features from these \ac{A-A} games can be applied to another genre: the Monster Battling \ac{RPG}. Games in this genre tend to have a set of rules about the world that are taught up-front, and are gated by the Player's stregth, either through the level of their own monsters as in \textit{Pok\'emon}, or current health/weapon stregth as in \textit{Monster Hunter}, but also use in-game journals to help players track information about Monsters. Pulling some of the use of mystery from these \ac{A-A} games and gating progression through Player knowledge can lead to a new take on the genre, providing an additional hook to the satisfaction of winning a difficult battle.
