--- a/Latex/FinalPaper/IntroToVideoGames.tex
+++ b/Latex/FinalPaper/IntroToVideoGames.tex
@@ -8,9 +8,11 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
+\usepackage{acronym} 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
+\input{acronyms.tex}
 \input{00_Cover.tex}
 \input{01_Introduction.tex}
 
