Update Paper Section 1 to discuss Party/Roguelike games

--- a/Latex/FinalPaper/00_Cover.tex
+++ b/Latex/FinalPaper/00_Cover.tex
@@ -45,8 +45,10 @@ nroe1@jh.edu}
 \begin{abstract}
 This paper will provide a high-level overview of Video Game
 Design and it overlaps with Game Theory and Decision Theory.
+It then analyzes combining features from Roguelike and Party
+Games to create a new game loop structure.
 \end{abstract}
 
 \begin{IEEEkeywords}
-Video Games, Simulations, Game Design, Game Theory
+Video Games, Simulations, Game Design, Game Theory, Party Games, Cooperative Games, Roguelike Games
 \end{IEEEkeywords}
