--- a/Latex/FinalPaper/01_Introduction.tex
+++ b/Latex/FinalPaper/01_Introduction.tex
@@ -9,10 +9,6 @@ Practical approaches to games involve the actual programming and creation of gam
 
 What sets Video Games apart from other Physics-based computer systems, such as Simulations, is the idea that games are intended to bring some sort of satisfaction to Players in order to draw engagement, using appealing visuals and creating games systems that are enjoyable and challenging to the Player. Categorizing games by genre allows for users to assess and consider games based on similarity between similarity in rules, subject matter, and even difficulty so that Players can learn from experiences and apply these lessons to improving in skills required for certain games. For example, aim and reaction time may be critical to games in the First-Person Shooter genre, while Puzzle games may require critical or non-linear thinking to come up with solutions in the context of that game's world.
 
-One of my preferred genres is \ac{A-A}: a genre built upon the combination of two other genres. This genre is generally characterized by building upon the set of features of its individual components as a combination of exploration and combat. From the Action genre, common features of \ac{A-A} include discovery of new areas, item collection, and puzzle solving as a means of accessing new locations. The combination of these features Combat from Action games is what sets \ac{A-A} games into a category of its own.
+One such example of a genre is the Party Game. This genre is targeted at being played with groups of users, generally together in the same room, with relatively simple mechanics and targeted at playing multiple rounds of \ac{coop} or cooperative levels. Generally, these games are intended to be continually replayable and quick for Players to learn the basics~\cite{b4}. The specific sub-genre this paper will look at is the \ac{coop} Party Game; a good example of this type of game is \textit{Overcooked}, in which multiple players work together accomplishing tasks in a time crunch in order to prepare orders in a kitchen. The mechanics are relatively simple, but require Player coordination to succeed in the fast-paced environment. While the Players are focused on achieving their tasks, \textit{Overcooked} throws additional environmental challenges into the mix: making players avoid or extinguish fires, or rearranging the kitchen layouts to force Players to switch up their rhythms.
 
-A great example of a recent \ac{A-A} game is \textit{Tunic}. The game is very reminiscent of the original \textit{The Legend of Zelda} game (often considered one of the defining games of the genre~\cite{b4}), as the Player embarks on a journey of exploration in a mostly open-world map, fighting increasingly difficult enemies and acquiring new items for combat and exploration. The defining feature of \textit{Tunic}, however, is the inclusion of a second level of puzzle solving; in addition to learning how to access the challenges and puzzles in the world, the Player must also discover the rules of the game itself. Other than the standard in-game menu for saving and options, explanations of features and storeline are contained in an ``Instruction Booklet'' written partially in an in-game language unknown to the Player and with many pages outright missing. The Player must learn the rules through context clues, discovering new pages during exploration, or by the sheer luck of trial-and-error. The additional layer of discovery adds another set of satisfying payoffs for players who enjoy the feeling of discovery provided by learning and mastering the rules of Action-Adventure games.
-
-Another recent \ac{A-A} game, \textit{Outer Wilds}, brings a similar feeling of satisfaction through a different application of mystery about game features. The player starts out with all of the in-game skills they will need to beat the game, but completion of the game is gated by knowledge of the rules of the character's world itself. Players must loop through the game, applying knowledge learned through previous iterations to further their understanding, eventually learning how to complete the game. Similar to \textit{Tunic}, knowledge is tracked in an updating in-game log to help player's keep track of information they have learned about the world. This explanation of the game systems is purposefully left at a very high level as it shares another feature with \textit{Tunic}: spoiling how the systems work removes some satisfaction of figuring out game rules in real time.
-
-This paper will look at how similar features from these \ac{A-A} games can be applied to another genre: the Monster Battling \ac{RPG}. Games in this genre tend to have a set of rules about the world that are taught up-front, and are gated by the Player's strength, either through the level of their own monsters as in \textit{Pok\'emon}, or current health/weapon strength as in \textit{Monster Hunter}, but also use in-game journals to help players track information about Monsters. Pulling some of the use of mystery from these \ac{A-A} games and gating progression through Player knowledge can lead to a new take on the genre, providing an additional hook to the satisfaction of winning a difficult battle.
+This paper will evaluate combining the \ac{coop} Party Game structure with another genre, \textit{Roguelikes}, to create a new, local \ac{coop} experience. The shared mechanic of Roguelike games is a repetitive gameplay loop, where Players constantly restart from the same location, but progress through the game by gaining knowledge, skills, and power-ups acquired through previous loops. These games can generally be very difficult, as they are intended to require players to iterate to progress, so players are intended to lose repeatedly. However, this repetitive nature is similar to the structure of Party Games. This game structure is intended to generate Player engagement by combining the simple mechanics requiring Player cooperation from Party Games with the skill acquisition through repetition structure of Roguelikes.
