--- a/Latex/FinalPaper/acronyms.tex
+++ b/Latex/FinalPaper/acronyms.tex
@@ -1,3 +1,4 @@
 \acrodef{AI}[AI]{\emph{Artificial Intelligence}}
 \acrodef{A-A}[A-A]{\emph{Action-Adventure}}
 \acrodef{RPG}[RPG]{\emph{Role Playing Game}}
+\acrodef{coop}[Co-Op]{\emph{Cooperative}}
