--- a/Latex/FinalPaper/IntroToVideoGames.tex
+++ b/Latex/FinalPaper/IntroToVideoGames.tex
@@ -8,13 +8,16 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
-\usepackage{acronym} 
+\usepackage{acronym}
+\usepackage{multirow}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 \input{acronyms.tex}
 \input{00_Cover.tex}
 \input{01_Introduction.tex}
+\input{02_GameEngines.tex}
+\input{03_CurrentStateOfTheArt.tex}
 
 \input{99_Bibliography}
 \end{document}
