Add remaining sections

--- a/Latex/FinalPaper/03_CurrentStateOfTheArt.tex
+++ b/Latex/FinalPaper/03_CurrentStateOfTheArt.tex
@@ -1,3 +1,21 @@
 \section{Current State of the Art}
 
+A few trends are driving Video Game development across the industry. First, opportunities to monetize Video Gaming both for developers and
+players are driving the development of certain types of games. On the Player side, monetization is led primarily by E-Sports and streaming. Because
+of the recent spike in viewership for both E-Sport competition as well as streaming, many large AAA game developers are working on online,
+multiplayer, competitive games, to try and get a part of the huge player base and viewership that games like \textit{Fortnite} have succeeded in
+achieving. On the developer side, these types of games are set up well to provide microtransactions, or in-game purchases, for players who
+are willing to spend additional money on top of game purchases to have unique characterization in massive online communities.
 
+Other recent trends include the growth of massive, open world games, where the in-game map buffers naturally to give the Player the feeling that
+there are endless opportunities for exploration and adventure. Growth in this area is fed by the critical success of games like \textit{Skyrim} or \textit{The
+Legend of Zelda, Breath of the Wild}. These types of games have been made possible by huge advances in game engine technology, with engines like
+Unity and Unreal making it possible to track thousands of assets, quickly load new scenes, and optimize game performance to allow for much
+larger games than were previously possible.
+
+The game concept proposed here does not follow these trends, but combines a few other popular game styles, Roguelike and Party Games. Roguelike
+games are increasing in popularity, with a few large success stories in recent years. Two recent examples are \textit{Hollow Knight} and
+\textit{Hades}, which both won multiple awards in their release year and achieved large player bases. Additionally, Party Games have been popular
+for many years; for example, \textit{Mario Kart 8} is the sixth-best selling game of all time, with over 80 million copies sold. Combining these
+genres with local-multiplayer, which is not available in many modern multiplayer games after the growth of internet-enabled games, positions this
+concept to be unique in the market.
