--- a/Latex/FinalPaper/IntroToVideoGames.tex
+++ b/Latex/FinalPaper/IntroToVideoGames.tex
@@ -18,6 +18,8 @@
 \input{01_Introduction.tex}
 \input{02_GameEngines.tex}
 \input{03_CurrentStateOfTheArt.tex}
+\input{04_DesignAndPrototype.tex}
+\input{05_ResultsAndConclusion.tex}
 
 \input{99_Bibliography}
 \end{document}
