--- a/Latex/FinalPaper/acronyms.tex
+++ b/Latex/FinalPaper/acronyms.tex
@@ -2,3 +2,4 @@
 \acrodef{A-A}[A-A]{\emph{Action-Adventure}}
 \acrodef{RPG}[RPG]{\emph{Role Playing Game}}
 \acrodef{coop}[Co-Op]{\emph{Cooperative}}
+\acrodef{UI}[UI]{\emph{User Interface}}
