Add references and update title/abstract

--- a/Latex/FinalPaper/00_Cover.tex
+++ b/Latex/FinalPaper/00_Cover.tex
@@ -1,4 +1,4 @@
-\title{Introduction to Theoretical and Practical Approaches to Games\\
+\title{\textit{All Hands On Deck}: Applying Theoretical and Practical Design to Create a Novel Game Loop\\
 %%{\footnotesize \textsuperscript{*}Subtitle}
 %% \thanks{Identify applicable funding agency here. If none, delete this.}
 }
@@ -46,7 +46,10 @@ nroe1@jh.edu}
 This paper will provide a high-level overview of Video Game
 Design and it overlaps with Game Theory and Decision Theory.
 It then analyzes combining features from Roguelike and Party
-Games to create a new game loop structure.
+Games to create a new game loop structure to create a new
+game, \textit{All Hands On Deck}, following the game from
+initial conceptualization and design through an intial
+prototype with play testing.
 \end{abstract}
 
 \begin{IEEEkeywords}
