--- a/Latex/FinalPaper/00_Cover.tex
+++ b/Latex/FinalPaper/00_Cover.tex
@@ -44,11 +44,11 @@ nroe1@jh.edu}
 
 \begin{abstract}
 This paper will provide a high-level overview of Video Game
-Design and it overlaps with Game Theory and Decision Theory.
+Design and its overlaps with Game Theory and Decision Theory.
 It then analyzes combining features from Roguelike and Party
-Games to create a new game loop structure to create a new
+Games to create a new game loop structure for a new
 game, \textit{All Hands On Deck}, following the game from
-initial conceptualization and design through an intial
+initial conceptualization and design through an initial
 prototype with play testing.
 \end{abstract}
 
